# HWAXPortal

./: .dockerignore  .env.example  .env.real  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  restart.sh
backend/: pyproject.toml  requirements.txt  ruff.toml
backend/app/: config.py  deps.py  main.py  routes_health.py
backend/app/agent/: audit.py  conv_store.py  routes.py  sse.py
backend/app/auth/: cookies.py  downstream.py  errors.py  factory.py  jwt_service.py  keystore.py  mock_provider.py  oidc_provider.py  pat_verify.py  provider.py  saml_provider.py  saml_sp.py  token_store.py
backend/app/auth/routes/: dev_downstream.py  jwks.py  launch.py  mock_idp.py  oidc_mock_idp.py  pat.py  saml.py  session.py
backend/app/catalog/: registry.py  routes.py
backend/app/mail/: base.py  console.py  graph.py  routes.py  service.py  smtp.py
backend/app/mcp/: registry.py  routes.py
backend/app/schemas/: auth.py  mail.py  mcp.py  system.py
backend/config/: routes.env  routes.prod.env  systems.yaml
backend/config/saml/: sp.crt
backend/config/saml/dev/: idp.crt  mock_idp_metadata.xml
backend/config/saml/prod/: README.md
backend/scripts/: gen_dev_certs.py
docs/: AGENTSERVER-FEATURE-SUMMARY.md  AIDATAHUB-FEATURE-SUMMARY.md  CALC-TOOLS-FEDERATION-SCALING.md  CHAT-FIRST-AI-INTEGRATION.md  DELIB-UPGRADE-NOTES.md  DELIBERATION-PIPELINE.md  DEPLOY-RUNBOOK-2026-07-21.md  GLM-DELIB-TUNING-REVIEW.md  GO-LIVE.md  HEAX-MCP-AUTOWIRE.md  HEAXHUB-FEATURE-SUMMARY.md  HWAX-Dev-Status.html  HWAX-HUB-STRATEGY-OUTLINE.md  LINKED-SERVICES.md  (+20 more)
(+104 files in other folders)
